// Distributed under the MIT software license, see the accompanying
// file LICENSE or http://www.opensource.org/licenses/mit-license.php.

syntax = "proto3";

option go_package = "github.com/theQRL/zond/protos";

package protos;

import "protos/transaction.proto";

message BlockHeader {
    uint64 slot_number = 1;
    bytes parent_header_hash = 2;
}

message Block {
    BlockHeader header = 1;
    repeated ProtocolTransaction protocol_transactions = 2;
    repeated Transaction transactions = 3;
}

